# embassy

./: .gitignore  LICENSE  README.md
appendixd/: configure.ac
appendixd/emboss_acd/: crystalball.acd
appendixd/src/: Makefile.am  config.h  config.h.in  crystalball  crystalball.c
cbstools/: Makefile.am  configure.in
cbstools/emboss_acd/: echlorop.acd  elipop.acd  enetnglyc.acd  enetoglyc.acd  enetphos.acd  eprop.acd  esignalp.acd  etmhmm.acd  eyinoyang.acd
cbstools/src/: echlorop.c  elipop.c  enetnglyc.c  enetoglyc.c  enetphos.c  eprop.c  esignalp.c  etmhmm.c  eyinoyang.c
clustalomega/: ChangeLog  Makefile.am  README  configure.in
clustalomega/emboss_acd/: Makefile.am  eomega.acd  eomegapp.acd  eomegaps.acd  eomegash.acd  eomegasp.acd
clustalomega/src/: Makefile.am  config.h.in  eomega.c  eomegapp.c  eomegaps.c  eomegash.c  eomegasp.c
domainatrix/: Makefile.am  configure.in
domainatrix/emboss_acd/: cathparse.acd  domainnr.acd  domainreso.acd  domainseqs.acd  domainsse.acd  libscan.acd  libscanout.acd  scopparse.acd  ssematch.acd
domainatrix/src/: cathparse.c  domainnr.c  domainreso.c  domainseqs.c  domainsse.c  scopparse.c  ssematch.c
domalign/: configure.in
domalign/emboss_acd/: allversusall.acd  domainalign.acd  domainrep.acd  seqalign.acd
domalign/src/: allversusall.c  domainalign.c  domainrep.c  seqalign.c
domsearch/: configure.in
domsearch/emboss_acd/: seqfraggle.acd  seqnr.acd  seqsearch.acd  seqsort.acd  seqwords.acd
domsearch/src/: seqfraggle.c  seqnr.c  seqsearch.c  seqsort.c  seqwords.c
emnu/: Makefile.am  configure.in
emnu/emboss_acd/: emnu.acd
emnu/source/: emnu.c
emnu/src/: emnu.c
esim4/: configure.in
esim4/emboss_acd/: esim4.acd
esim4/src/: libc.h  poly.c  splice.c
hmmer/src/: aligneval.c  alignio.c  alphabet.c  cluster.c  core_algorithms.c  dayhoff.c  debug.c  ealistat.c  ehmmalign.c  ehmmbuild.c  ehmmcalibrate.c  ehmmemit.c  ehmmfetch.c  ehmmindex.c  ehmmpfam.c  ehmmsearch.c  emit.c  emulation.c  file.c  funcs.h  getopt.c  gsi.c  histogram.c  hsregex.c  interleaved.c  iupac.c  masks.c  msf.c  revcomp.c  selex.c  sqerror.c  sqfuncs.h  sqio.c  squid.h  sre_ctype.c  sre_math.c  sre_string.c  stack.c  structs.h  threads.c  (+5 more)
hmmernew/: Makefile.am  configure.in
hmmernew/emboss_acd/: ehmmalign.acd  ehmmbuild.acd  ehmmcalibrate.acd  ehmmconvert.acd  ehmmemit.acd  ehmmfetch.acd  ehmmindex.acd  ehmmpfam.acd  ehmmsearch.acd
hmmernew/src/: ehmmalign.c  ehmmbuild.c  ehmmcalibrate.c  ehmmconvert.c  ehmmemit.c  ehmmfetch.c  ehmmindex.c  ehmmpfam.c  ehmmsearch.c
iprscan/: Makefile.am  configure.in
iprscan/emboss_acd/: eiprscan.acd
iprscan/src/: eiprscan.c
meme/src/: align.c  banner.c  chi.c  clock.c  display.c  em.c  gamma.c  hash.c  hash_alph.c  init.c  justlike.c  likelihood.c  logodds.c  logs.c  meme.c  meme_util.c  normalize.c  oops.c  palindrome.c  prior.c  read_seq_file.c  seq2theta.c  shorten.c  split.c  tcm.c  zoops.c
memenew/: README  configure.in
memenew/emboss_acd/: emast.acd  ememe.acd  ememetext.acd
memenew/src/: emast.c  ememe.c  ememetext.c
mse/: Makefile.am  configure.in
mse/ckit/: ttyinterface.c
mse/emboss_acd/: mse.acd
mse/src/: mse.c
myemboss/: configure.in
myemboss/src/: Makefile.am  template.c
myembossdemo/: Makefile.am  configure.in
myembossdemo/emboss_acd/: Makefile.am  demoalign.acd  demodirectory.acd  demodirlist.acd  demofeatures.acd  demofilelist.acd  demolist.acd  demoreport.acd  demosequence.acd  demostring.acd  demostringnew.acd  demotable.acd  myseq.acd
myembossdemo/src/: Makefile.am  demoalign.c  demodirectory.c  demodirlist.c  demofeatures.c  demofilelist.c  demolist.c  demoreport.c  demosequence.c  demostring.c  demostringnew.c  demotable.c  myseq.c  mytest.c
phylipnew/: COPYING  ChangeLog  Makefile.am  configure.in
phylipnew/emboss_acd/: fclique.acd  fconsense.acd  fcontml.acd  fcontrast.acd  fdiscboot.acd  fdnacomp.acd  fdnadist.acd  fdnainvar.acd  fdnaml.acd  fdnamlk.acd  fdnamove.acd  fdnapars.acd  fdnapenny.acd  fdollop.acd  fdolmove.acd  fdolpenny.acd  fdrawgram.acd  fdrawtree.acd  ffactor.acd  ffitch.acd  ffreqboot.acd  fgendist.acd  fkitsch.acd  fmix.acd  fmove.acd  fneighbor.acd  (+14 more)
signature/: configure.in
structure/: configure.in
topo/: configure.in
viennanew/: Makefile.am  configure.in
viennanew/emboss_acd/: Makefile.am  ovrnaalifold.acd  ovrnaalifoldpf.acd  ovrnacofold.acd  ovrnacofoldconc.acd  ovrnacofoldpf.acd  ovrnadistance.acd  ovrnaduplex.acd  ovrnaeval.acd  ovrnaevalpair.acd  ovrnafold.acd  ovrnafoldpf.acd  ovrnaheat.acd  ovrnainverse.acd  ovrnalfold.acd  ovrnapaln.acd  ovrnaplot.acd  ovrnasubopt.acd
viennanew/emboss_doc/html/: Makefile.am  index.html  ovrnaalifold.html  ovrnaalifoldpf.html  ovrnacofold.html  ovrnacofoldconc.html  ovrnacofoldpf.html  ovrnadistance.html  ovrnaduplex.html  ovrnaeval.html  ovrnaevalpair.html  ovrnafold.html  ovrnafoldpf.html  ovrnaheat.html  ovrnainverse.html  ovrnalfold.html  ovrnaplot.html  ovrnasubopt.html
viennanew/emboss_doc/text/: Makefile.am  ovrnaalifold.txt  ovrnaalifoldpf.txt  ovrnacofold.txt  ovrnacofoldconc.txt  ovrnacofoldpf.txt  ovrnadistance.txt  ovrnaduplex.txt  ovrnaeval.txt  ovrnaevalpair.txt  ovrnafold.txt  ovrnafoldpf.txt  ovrnaheat.txt  ovrnainverse.txt  ovrnalfold.txt  ovrnaplot.txt  ovrnasubopt.txt
viennanew/src/: Makefile.am  alifold.c  alipfold.c  cofold.c  config.h  config.h.in  duplex.c  eLfold.c  ePS_dot.c  epart_func_co.c  fold.c  params.c  part_func.c  part_func_up.c  subopt.c  utils.c  vrnaalifold.c  vrnaalifoldpf.c  vrnacofold.c  vrnacofoldconc.c  vrnacofoldpf.c  vrnadistance.c  vrnaduplex.c  vrnaeval.c  vrnaevalpair.c  vrnafold.c  vrnafoldpf.c  vrnaheat.c  vrnainverse.c  vrnalfold.c  vrnaplot.c  vrnasubopt.c
(+318 files in other folders)
