
pkgdata_DATA = ovrnaalifold.acd ovrnadistance.acd \
	ovrnafoldpf.acd ovrnaplot.acd \
	ovrnaalifoldpf.acd ovrnaduplex.acd ovrnaheat.acd ovrnasubopt.acd \
	ovrnacofold.acd ovrnaeval.acd ovrnainverse.acd \
	ovrnacofoldconc.acd ovrnaevalpair.acd ovrnalfold.acd \
	ovrnacofoldpf.acd ovrnafold.acd ovrnapaln.acd

pkgdatadir=$(prefix)/share/EMBOSS/acd
