pkgdata_DATA = index.html \
	ovrnaalifold.html ovrnaalifoldpf.html \
	ovrnacofold.html ovrnacofoldconc.html ovrnacofoldpf.html \
	ovrnadistance.html ovrnaduplex.html \
	ovrnaeval.html ovrnaevalpair.html \
	ovrnafold.html ovrnafoldpf.html \
	ovrnaheat.html ovrnainverse.html \
	ovrnalfold.html ovrnaplot.html \
	ovrnasubopt.html

pkgdatadir=$(prefix)/share/EMBOSS/doc/html/embassy/oldvienna
