pkgdata_DATA =  ovrnaalifold.txt ovrnaalifoldpf.txt \
	ovrnacofold.txt ovrnacofoldconc.txt ovrnacofoldpf.txt \
	ovrnadistance.txt ovrnaduplex.txt \
	ovrnaeval.txt ovrnaevalpair.txt \
	ovrnafold.txt ovrnafoldpf.txt \
	ovrnaheat.txt ovrnainverse.txt \
	ovrnalfold.txt ovrnaplot.txt ovrnasubopt.txt

pkgdatadir=$(prefix)/share/EMBOSS/doc/programs/text
